--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
             <div class="text">background-image: linear-gradient(90deg, #FFFF00 0%, #00BCD4 50%, #EE82EE 100%);</div>
             <div class="copy">Copy your code</div>
             <div class="buttongroup">
-                <button class="button1">Left</button>
-                <button class="button2">Right</button>
+                <button class="button1">Left Generate</button>
+                <button class="button2">Right Generate</button>
             </div>
+            <button class="button3">Max Generate</button>
         </div>
     </div>
 
