added copy button

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div class="parent_wrapper">
-
         <div class="wrapper">
+            <h1 class="title">Gradient Generator</h1>
             <div class="text">background-image: linear-gradient(90deg, #FFFF00 0%, #00BCD4 50%, #EE82EE 100%);</div>
-            <div class="copy">Copy your code</div>
             <div class="buttongroup">
                 <button class="button1">Left Generate</button>
                 <button class="button2">Right Generate</button>
+                <button class="button3">Max Generate</button>
             </div>
-            <button class="button3">Max Generate</button>
+            <button id="copyButton">Copy Background Code</button>
         </div>
     </div>
 
